# readaloud

./: .gitignore  README.md  index.html  reader.html
backend/: .env.example  .gcloudignore  DEPLOY.md  DEPLOY_GCP.md  Dockerfile  README.md  main.py  package.json  pyproject.toml  run.sh  tts_provider.py  worker.js  wrangler.toml
css/: epubjs.css  reader.css  style.css
js/: api.js  app.js  auth.js  reader-gen-patch.js  reader.js  storage.js
worker/: .env.example  README.md  index.js  wrangler.toml
